--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
 	<ion-side-menu-content>
-		<ion-nav-bar class="bar-positive-900">
+		<ion-nav-bar class="bar-positive-900" ng-class="{expanded: isExpanded}" align-title="left">
 			<ion-nav-back-button class="no-text">
 			</ion-nav-back-button>
 
