--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -1,9 +1,18 @@
 <ion-view view-title="Posts">
-  <ion-content>
-    <ion-list>
-      <ion-item ng-repeat="post in posts" href="#/app/posts/{{post.id}}">
-        {{post.title}}
-      </ion-item>
-    </ion-list>
-  </ion-content>
+	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
+		<div ng-repeat="post in posts" href="#/app/posts/{{post.id}}" class="item card-item">
+			<div class="card stable-bg ink ink-dark">
+				<div class="item item-avatar item-text-wrap">
+					<span class="avatar"></span>
+					<strong>{{post.title.rendered}}</strong>
+					<div class="card-footer pull-right">
+						<span>
+							<i class="icon ion-clock positive"></i> {{ post.date | date:'yyyy-MM-dd HH:mm' }}
+						</span>
+					</div>
+					<div class="excerpt" ng-bind-html="post.excerpt.rendered"></div>
+				</div>
+			</div>
+		</div>
+	</ion-content>
 </ion-view>
