--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -1,5 +1,9 @@
 <ion-view view-title="Posts">
 	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
+		<ion-refresher
+			pulling-text="Pull to refresh..."
+			on-refresh="refreshPosts()">
+		</ion-refresher>
 		<div ng-repeat="post in posts" href="#/app/posts/{{post.id}}" class="item card-item">
 			<div class="card stable-bg ink ink-dark">
 				<div class="item item-avatar item-text-wrap">
@@ -15,7 +19,7 @@
 			</div>
 		</div>
 		<ion-infinite-scroll
-			on-infinite="loadMore()"
+			on-infinite="morePosts()"
 			distance="1%">
 		</ion-infinite-scroll>
 	</ion-content>
