Corrected some Ink display
Waiting for ionic material Ink effect issue to be resolved

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,16 +19,16 @@
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
-				<ion-item menu-close href="#/app/posts">
+				<ion-item menu-close class="ink ink-dark" href="#/app/posts">
 				Home
 				</ion-item>
-				<ion-item menu-close ng-click="showModal()">
+				<ion-item menu-close class="ink ink-dark" ng-click="showModal()">
 				Login
 				</ion-item>
-				<ion-item menu-close href="#/app/search">
+				<ion-item menu-close class="ink ink-dark" href="#/app/search">
 				Search
 				</ion-item>
-				<ion-item menu-close href="#/app/browse">
+				<ion-item menu-close class="ink ink-dark" href="#/app/browse">
 				Browse
 				</ion-item>
 			</ion-list>
