--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -1,10 +1,10 @@
 <ion-view view-title="Posts">
-	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
+	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" ng-show="views.list">
 		<ion-refresher
 			pulling-text="Pull to refresh..."
 			on-refresh="refreshPosts()">
 		</ion-refresher>
-		<div ng-repeat="post in posts" href="#/app/posts/{{post.id}}" class="item card-item">
+		<div ng-repeat="post in posts" ng-click="single(post.id)" class="item card-item">
 			<div class="card stable-bg ink ink-dark">
 				<div class="item item-avatar item-text-wrap">
 					<span class="avatar"><img ng-src="{{post.thumbnail_url}}"></span>
@@ -22,5 +22,13 @@
 			on-infinite="morePosts()"
 			distance="1%">
 		</ion-infinite-scroll>
+	</ion-content>
+
+	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" ng-show="views.single">
+		<ion-refresher
+			pulling-text="Pull to refresh..."
+			on-refresh="refreshPosts()">
+		</ion-refresher>
+		<div></div>
 	</ion-content>
 </ion-view>
