--- a/www/templates/posts.html
+++ b/www/templates/posts.html
@@ -4,7 +4,7 @@
 			pulling-text="Pull to refresh..."
 			on-refresh="refreshPosts()">
 		</ion-refresher>
-		<div ng-repeat="post in posts" ng-click="single(post.id)" class="item card-item">
+		<div ng-repeat="post in posts" ng-click="single($index)" class="item card-item">
 			<div class="card stable-bg ink ink-dark">
 				<div class="item item-avatar item-text-wrap">
 					<span class="avatar"><img ng-src="{{post.thumbnail_url}}"></span>
@@ -27,8 +27,10 @@
 	<ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" ng-show="views.single">
 		<ion-refresher
 			pulling-text="Pull to refresh..."
-			on-refresh="refreshPosts()">
+			on-refresh="refreshPost()">
 		</ion-refresher>
-		<div></div>
+		<div class="item">
+			<div class="content" ng-bind-html="singlePost.content.rendered"></div>
+		</div>
 	</ion-content>
 </ion-view>
