--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,11 @@
 <ion-view view-title="Search">
-  <ion-content>
-    <h1>Search</h1>
-  </ion-content>
+	<ion-content>
+		<label class="item item-input">
+			<i class="icon ion-search placeholder-icon"></i>
+			<input type="search" placeholder="Search">
+		</label>
+		<button class="button icon ion-search button-block button-balanced">
+			Search
+		</button>
+	</ion-content>
 </ion-view>
