--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,11 +1,27 @@
 <ion-view view-title="Search">
 	<ion-content>
-		<label class="item item-input">
-			<i class="icon ion-search placeholder-icon"></i>
-			<input type="search" placeholder="Search">
-		</label>
-		<button class="button icon ion-search button-block button-balanced">
-			Search
-		</button>
+		<form ng-submit="search()">
+			<label class="item item-input">
+				<i class="icon ion-search placeholder-icon"></i>
+				<input type="search" placeholder="Search">
+			</label>
+			<button class="button icon ion-search button-block button-balanced" type="submit">
+				Search
+			</button>
+		</form>
+		<div ng-repeat="post in posts" ng-click="single($index)" class="item card-item">
+			<div class="card stable-bg ink ink-dark">
+				<div class="item item-avatar item-text-wrap">
+					<span class="avatar"><img ng-src="{{post.thumbnail_url}}"></span>
+					<strong>{{post.title.rendered}}</strong>
+					<div class="card-footer pull-right">
+						<span>
+							<i class="icon ion-clock positive"></i> {{ post.date | date:'yyyy-MM-dd HH:mm' }}
+						</span>
+					</div>
+					<div class="excerpt" ng-bind-html="post.excerpt.rendered"></div>
+				</div>
+			</div>
+		</div>
 	</ion-content>
 </ion-view>
