Search Term Filter

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,7 +3,7 @@
 		<form ng-submit="search()">
 			<label class="item item-input">
 				<i class="icon ion-search placeholder-icon"></i>
-				<input type="search" placeholder="Search">
+				<input type="search" ng-model="form.search" placeholder="Search">
 			</label>
 			<button class="button icon ion-search button-block button-balanced" type="submit">
 				Search
